--- a/news-server/pom.xml
+++ b/news-server/pom.xml
@@ -13,7 +13,7 @@
 
 	<parent>
 		<groupId>com.stankiewicz</groupId>
-    <artifactId>jira-plugin-parent</artifactId>
+    <artifactId>news-app-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 	</parent>
 
@@ -68,6 +68,24 @@
 			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+			<plugin>
+			<artifactId>maven-resources-plugin</artifactId>
+			<executions>
+			      <execution>
+			          <id>copy-resources</id>
+			          <phase>validate</phase>
+			          <goals><goal>copy-resources</goal></goals>
+			          <configuration>
+			              <outputDirectory>${project.build.directory}/classes/resources/</outputDirectory >
+			              <resources>
+			                  <resource>
+			                      <directory>${project.parent.basedir}/news-web/src/main/web/dist/news-frontend</directory >
+			                  </resource>
+			              </resources>
+			          </configuration>
+			      </execution>
+			</executions>
 			</plugin>
 		</plugins>
 	</build>
